objects/Payment__c.object
<CustomObject>
    <fields>
        <fullName>BLN_Pay_Gateway__c</fullName>
        <label>BLN Pay Gateway</label>
        <referenceTo>Pay_Gateway__c</referenceTo>
        <relationshipLabel>BLN Payments</relationshipLabel>
        <relationshipName>BLN_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipName>Payments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pay_Address__c</fullName>
        <label>Pay Address</label>
        <referenceTo>Pay_Address__c</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Pay Gateway</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Ref_Number__c</fullName>
        <label>Payment Ref Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Type__c</fullName>
        <label>Registration Type</label>
        <picklist>
            <picklistValues>
                <fullName>Online</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Import</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>credit_card_last_4digits__c</fullName>
        <label>credit_card_last_4digits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>credit_card_type__c</fullName>
        <label>credit_card_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BLN Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Payment_Mode__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Payment_Ref_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PAY-{00000000}</displayFormat>
        <label>Payment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>